src/pages/home/home.scss
@import "../../styles/colors";
@import "../../styles/fonts";

.home {
  min-height: 100vh;

  .left-container {
    background-color: $dark;
    width: 45%;

    .left-container-items {
      gap: 200px !important;

      .logo {
        margin-right: 100px;
      }

      h2 {
        font-size: 72px;
        font-weight: $font-weight-bold;
        line-height: 98px;
        width: 55%;
      }
    }
  }

  .right-container {
    width: 55%;

    .right-container-content {
      height: 100%;

      .right-container-title {
        h2 {
          font-size: 40px;
          font-weight: $font-weight-semibold;
        }
      }

      .right-container-body {
        button {
          border-radius: 40px !important;
          font-size: 25px;
          font-weight: $font-weight-regular;
        }

        .btn-outline-dark {
          border-color: $dark;
          color: $dark;
        }

        .btn-outline-dark:hover {
          background-color: $dark;
          color: #fff;
        }

        .btn-outline-primary {
          border-color: $orange;
          color: $orange;
        }

        .btn-outline-primary:focus,
        .btn-outline-dark:focus {
          box-shadow: none;
        }

        .btn-outline-primary:hover {
          background-color: $orange;
          color: #fff;
        }
      }
    }
  }
}

